<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context="com.varsim.myexcua.activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="90dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_username_editbox"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username" />

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:hint="@string/username"
                android:paddingLeft="10dp"
                android:textColorHint="@color/green" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_password_editbox"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:hint="@string/password"
                android:paddingLeft="10dp"
                android:textColorHint="@color/green" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_loginbtn">

            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/login_text"
                android:textAllCaps="false"
                style="@style/BigBold.White"/>
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app"
            android:textColor="@android:color/white"
            android:textSize="40sp"
            android:textStyle="bold|italic" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_signup_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/view"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:background="@drawable/rounded_corner_signup"
        android:gravity="center">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/signup_text"
            android:textAllCaps="false"
            style="@style/BigBold.White" />
    </RelativeLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true" />
</RelativeLayout>